# papyru2

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release-portable.yml
assets/icons/macos/: papyru2_app_icon.icns
conf/: papyru2_conf.toml
doc/: implementation_checklist.md  release_packaging_with_icons.md
src/: app.rs  association.rs  editor.rs  file_tree.rs  file_tree_watcher.rs  file_update_handler.rs  lib.rs  log.rs  main.rs  path_resolver.rs  quic_rpc.rs  quic_rpc_protocol.rs  singleline_create_file.rs  singleline_input.rs  sl_editor_association.rs  textfile_import.rs  top_bars.rs  window_position.rs
