[package]
name = "papyru2"
version = "0.10.0"
publish = false
edition = "2024"

[dependencies]
gpui = { version = "*" }
gpui-macros  = { version = "*" }
gpui-component = { version = "*", features = ["tree-sitter-languages"] }
gpui-component-assets = { version = "*" } 
reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
iroh = { version = "*" }
irpc = { version = "*", features = ["rpc", "derive", "noq_endpoint_setup"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "sync"] }
filetime = "0.2.27"

anyhow = "1.0.102"
lsp-types = "0.97.0"
tree-sitter-navi = "0.2.2"
autocorrect = "2.14.2"
chrono = "0.4.44"
smol = "2.0.2"
color-lsp = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tracing-subscriber = "0.3.23"
notify = "8.2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
