[package]
name = "papyru2"
version = "0.20.0"
publish = false
edition = "2024"
build = "build.rs"

[package.metadata.bundle]
name = "papyru2"
identifier = "com.papyru2.app"
icon = [
    "assets/icons/linux/papyru2_16x16.png",
    "assets/icons/linux/papyru2_32x32.png",
    "assets/icons/linux/papyru2_64x64.png",
    "assets/icons/linux/papyru2_128x128.png",
    "assets/icons/linux/papyru2_256x256.png",
    "assets/icons/linux/papyru2_512x512.png",
    "assets/icons/linux/papyru2_1024x1024.png",
    "assets/icons/macos/papyru2_app_icon.icns",
    "assets/icons/windows/papyru2_app_icon.ico",
]

[dependencies]
gpui = { version = "*" }
gpui-macros  = { version = "*" }
gpui-component = { version = "*", features = ["tree-sitter-languages"] }
gpui-component-assets = { version = "*" } 
raw-window-handle = "=0.6.2"
reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
windows = { version = "=0.57.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
iroh = { version = "*" }
irpc = { version = "*", features = ["rpc", "derive", "noq_endpoint_setup"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "sync"] }
filetime = "0.2.27"

anyhow = "1.0.102"
lsp-types = "0.97.0"
tree-sitter-navi = "0.2.2"
autocorrect = "2.14.2"
chrono = "0.4.44"
smol = "2.0.2"
color-lsp = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tracing-subscriber = "0.3.23"
notify = "8.2.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
